--- a/prometheus-swift-account-exporter.yaml
+++ b/prometheus-swift-account-exporter.yaml
@@ -1,15 +1,31 @@
 # Example configuration file for prometheus-swift-exporter
-# Copyright (C) 2016 Canonical, Ltd.
+# Copyright (C) 2016-2019 Canonical, Ltd.
 #
 
-listen_port: 9183
+listen_port: 42069
 cloud: mycloud
 
-# Port for swift recon urls
-swift_port: 6000
+# There is no API to ask Swift for a list of accounts it knows about.
+# Even if there were, Swift (in common case of Keystone auth, at
+# least) only knows them by the corresponding tenant ID, which would
+# be a less than useful label with post-processing.  The following
+# should point to a file containing one line per tenant, with the
+# tenant name first, then whitespace, followed by the tenant ID.
+keystone_tenants_map: 
 
-# There is no way to retrieve them using OpenStack APIs
-# For clouds deployed without swift, remove this part
-swift_hosts:
-    - host1.example.com
-    - host2.example.com
+# The reseller prefix is typically used by the Swift middleware to
+# keep accounts with different providers separate.  We would ideally
+# look this up dynamically from the Swift configuration.
+# The Keystone middlware defaults to the following value.
+reseller_prefix: AUTH_
+
+ring_path: /etc/swift
+
+# These will typically be read from /etc/swift/swift.conf.  If that
+# file cannot be opened, then the Swift library will log and error and
+# exit.  To run p-s-a-e as a user other than Swift, the following
+# settings must be set to the same values as the running Swift, and
+# the value above must point to a readable copy of the current rings.
+
+hash_path_prefix:
+hash_path_suffix:
